# bits-gpgme

./: .build.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  Makefile  README.md  cipher.c  cipher.h  cipher_build.py  config.h  configure  crypto.c  crypto.h  data.h  decrypt.c  encrypt.c  pyproject.toml  requirements.txt  roundtrip.c  test.sh  util.c  util.h
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: c-cpp.yml  ccpp.yml  cmake.yml
src/: CMakeLists.txt  cipher.c  cipher.h  decrypt.c  encrypt.c
test/: CMakeLists.txt  cipher_build.py  roundtrip.c  roundtrip.py
